--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/vue": "^3.7.0",
+		"axios": "^0.21.1",
 		"vue": "^2.6.12"
 	},
 	"browserslist": [
