--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/vue": "^3.7.0",
 		"axios": "^0.21.1",
+		"copy-to-clipboard": "^3.3.1",
 		"vue": "^2.6.12"
 	},
 	"browserslist": [
