--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"build": "NODE_ENV=production webpack --progress --hide-modules --config webpack.js",
 		"dev": "NODE_ENV=development webpack --progress --config webpack.js",
 		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
+		"test": "NODE_ENV=development jest",
 		"lint": "eslint --ext .js,.vue src",
 		"lint:fix": "eslint --ext .js,.vue src --fix",
 		"stylelint": "stylelint src",
@@ -36,13 +37,18 @@
 	"devDependencies": {
 		"@babel/core": "^7.13.8",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
+		"@babel/plugin-transform-runtime": "^7.13.15",
 		"@babel/preset-env": "^7.13.9",
 		"@nextcloud/browserslist-config": "^2.1.0",
 		"@nextcloud/eslint-config": "^2.2.0",
 		"@nextcloud/eslint-plugin": "^1.5.0",
 		"@nextcloud/webpack-vue-config": "^1.1.0",
+		"@testing-library/jest-dom": "^5.12.0",
+		"@testing-library/vue": "^5.6.2",
 		"@vue/test-utils": "^1.1.3",
+		"babel-core": "^7.0.0-bridge.0",
 		"babel-eslint": "^10.1.0",
+		"babel-jest": "^26.6.3",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^3.6.0",
 		"eslint": "^6.8.0",
@@ -54,12 +60,14 @@
 		"eslint-plugin-promise": "^4.3.1",
 		"eslint-plugin-standard": "^4.1.0",
 		"eslint-plugin-vue": "^6.2.2",
+		"jest": "^26.6.3",
 		"node-sass": "^4.14.1",
 		"sass-loader": "^8.0.2",
 		"stylelint": "^13.12.0",
 		"stylelint-config-recommended-scss": "^4.2.0",
 		"stylelint-scss": "^3.19.0",
 		"stylelint-webpack-plugin": "^2.1.1",
+		"vue-jest": "^3.0.7",
 		"vue-loader": "^15.9.6",
 		"vue-template-compiler": "^2.6.12",
 		"webpack": "^4.46.0",
