Do not use NODE_ENV=development for jest

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"build": "NODE_ENV=production webpack --progress --hide-modules --config webpack.js",
 		"dev": "NODE_ENV=development webpack --progress --config webpack.js",
 		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
-		"test": "NODE_ENV=development jest",
+		"test": "jest",
 		"lint": "eslint --ext .js,.vue src",
 		"lint:fix": "eslint --ext .js,.vue src --fix",
 		"stylelint": "stylelint src",
