--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ js/
 build/
 coverage/
 vendor/
+/fonts/selection.jsonZone.Identifier
+/fonts/icomoon.woffZone.Identifier
+/fonts/icomoon.ttfZone.Identifier
+/fonts/icomoon.svgZone.Identifier
+/fonts/icomoon.eotZone.Identifier
