--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"axios": "^0.21.1",
 		"copy-to-clipboard": "^3.3.1",
 		"lodash.debounce": "^4.0.8",
+		"query-string": "^7.0.0",
 		"vue": "^2.6.12"
 	},
 	"browserslist": [
