--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ vendor/
 /fonts/icomoon.ttfZone.Identifier
 /fonts/icomoon.svgZone.Identifier
 /fonts/icomoon.eotZone.Identifier
+/fonts/selection.json:Zone.Identifier
+/fonts/icomoon.woff:Zone.Identifier
+/fonts/icomoon.ttf:Zone.Identifier
+/fonts/icomoon.svg:Zone.Identifier
+/fonts/icomoon.eot:Zone.Identifier
