--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"babel-jest": "^26.6.3",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^3.6.0",
+		"cz-conventional-changelog": "3.3.0",
 		"eslint": "^6.8.0",
 		"eslint-config-standard": "^14.1.1",
 		"eslint-import-resolver-webpack": "^0.13.0",
@@ -74,5 +75,10 @@
 		"webpack": "^4.46.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-merge": "^5.7.3"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
 	}
 }
