--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 		"eslint-config-standard": "^14.1.1",
 		"eslint-import-resolver-webpack": "^0.13.0",
 		"eslint-loader": "^4.0.2",
-		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-import": "^2.23.4",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.3.1",
 		"eslint-plugin-standard": "^4.1.0",
@@ -65,10 +65,12 @@
 		"jest": "^26.6.3",
 		"node-sass": "^4.14.1",
 		"sass-loader": "^8.0.2",
-		"stylelint": "^13.12.0",
+		"style-loader": "^2.0.0",
+		"stylelint": "^13.13.1",
 		"stylelint-config-recommended-scss": "^4.2.0",
 		"stylelint-scss": "^3.19.0",
 		"stylelint-webpack-plugin": "^2.1.1",
+		"url-loader": "^4.1.1",
 		"vue-jest": "^3.0.7",
 		"vue-loader": "^15.9.6",
 		"vue-template-compiler": "^2.6.12",
