--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/router": "^2.0.0",
 		"@nextcloud/vue": "^4.0.2",
+		"@vue/composition-api": "^1.0.0-rc.12",
 		"axios": "^0.21.1",
 		"copy-to-clipboard": "^3.3.1",
 		"lodash.debounce": "^4.0.8",
