--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"@eid-easy/eideasy-signing-widget": "0.1.0-alpha.13",
 		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/router": "^2.0.0",
-		"@nextcloud/vue": "^4.0.2",
+		"@nextcloud/vue": "4.3.0",
 		"@vue/composition-api": "^1.0.0-rc.12",
 		"axios": "^0.21.1",
 		"copy-to-clipboard": "^3.3.1",
