--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@vue/composition-api": "^1.0.0-rc.12",
 		"axios": "^0.21.1",
 		"copy-to-clipboard": "^3.3.1",
+		"linkifyjs": "^3.0.4",
 		"lodash.debounce": "^4.0.8",
 		"query-string": "^7.0.0",
 		"vue": "^2.6.12"
