--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "eideasy/eideasy-php": "1.15"
+        "eideasy/eideasy-php": "^1.18"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.4"
