--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	],
 	"private": true,
 	"scripts": {
-		"build": "NODE_ENV=production webpack --progress --hide-modules --config webpack.js",
+		"build": "NODE_ENV=production webpack --progress --config webpack.js",
 		"dev": "NODE_ENV=development webpack --progress --config webpack.js",
 		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
 		"test": "jest",
@@ -21,65 +21,51 @@
 	},
 	"dependencies": {
 		"@eid-easy/eideasy-widget": "2.17.0",
-		"@nextcloud/l10n": "^1.4.1",
-		"@nextcloud/router": "^2.0.0",
-		"@nextcloud/vue": "4.3.0",
-		"@vue/composition-api": "^1.0.0-rc.12",
-		"axios": "^0.21.1",
-		"copy-to-clipboard": "^3.3.1",
-		"linkifyjs": "^3.0.4",
+		"@nextcloud/axios": "^2.4.0",
+		"@nextcloud/files": "^3.1.0",
+		"@nextcloud/l10n": "^2.2.0",
+		"@nextcloud/router": "^2.2.0",
+		"@nextcloud/vue": "8.4.0",
+		"copy-to-clipboard": "^3.3.3",
+		"linkifyjs": "^4.1.3",
 		"lodash.debounce": "^4.0.8",
-		"query-string": "^7.0.0",
-		"vue": "^2.6.12"
+		"query-string": "^8.1.0",
+		"vue": "^2.7.14"
 	},
 	"browserslist": [
 		"extends @nextcloud/browserslist-config"
 	],
 	"engines": {
-		"node": ">=10.0.0"
+		"node": ">=20.11.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.13.8",
+		"@babel/core": "^7.23.7",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
-		"@babel/plugin-transform-runtime": "^7.13.15",
-		"@babel/preset-env": "^7.13.9",
-		"@nextcloud/browserslist-config": "^2.1.0",
-		"@nextcloud/eslint-config": "^2.2.0",
-		"@nextcloud/eslint-plugin": "^1.5.0",
-		"@nextcloud/webpack-vue-config": "^1.1.0",
-		"@testing-library/jest-dom": "^5.12.0",
-		"@testing-library/vue": "^5.6.2",
-		"@vue/test-utils": "^1.1.3",
-		"babel-core": "^7.0.0-bridge.0",
-		"babel-eslint": "^10.1.0",
-		"babel-jest": "^26.6.3",
-		"babel-loader": "^8.2.2",
-		"css-loader": "^3.6.0",
+		"@babel/plugin-transform-runtime": "^7.23.7",
+		"@babel/preset-env": "^7.23.8",
+		"@nextcloud/webpack-vue-config": "^6.0.0",
+		"@testing-library/jest-dom": "^6.2.0",
+		"css-loader": "^6.9.1",
 		"cz-conventional-changelog": "3.3.0",
-		"eslint": "^6.8.0",
-		"eslint-config-standard": "^14.1.1",
-		"eslint-import-resolver-webpack": "^0.13.0",
-		"eslint-loader": "^4.0.2",
-		"eslint-plugin-import": "^2.23.4",
+		"eslint": "^8.56.0",
+		"eslint-config-standard": "^17.1.0",
+		"eslint-import-resolver-webpack": "^0.13.8",
+		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^4.3.1",
-		"eslint-plugin-standard": "^4.1.0",
-		"eslint-plugin-vue": "^6.2.2",
-		"jest": "^26.6.3",
-		"node-sass": "^4.14.1",
-		"sass-loader": "^8.0.2",
-		"style-loader": "^2.0.0",
-		"stylelint": "^13.13.1",
-		"stylelint-config-recommended-scss": "^4.2.0",
-		"stylelint-scss": "^3.19.0",
-		"stylelint-webpack-plugin": "^2.1.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-vue": "^9.20.1",
+		"eslint-webpack-plugin": "^4.0.1",
+		"jest": "^29.7.0",
+		"node-sass": "^9.0.0",
+		"sass-loader": "^13.3.2",
+		"style-loader": "^3.3.4",
 		"url-loader": "^4.1.1",
 		"vue-jest": "^3.0.7",
-		"vue-loader": "^15.9.6",
-		"vue-template-compiler": "^2.6.12",
-		"webpack": "^4.46.0",
-		"webpack-cli": "^3.3.12",
-		"webpack-merge": "^5.7.3"
+		"vue-loader": "^15.10.1",
+		"vue-template-compiler": "^2.7.16",
+		"webpack": "^5.89.0",
+		"webpack-cli": "^5.1.4",
+		"webpack-merge": "^5.10.0"
 	},
 	"config": {
 		"commitizen": {
