--- a/.github/workflows/build-publish-app-store.yml
+++ b/.github/workflows/build-publish-app-store.yml
@@ -18,8 +18,10 @@ jobs:
         nextcloud: ['stable28']
         database: ['sqlite']
     steps:
-      - name: Checkout
-        uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: 'package.json'
 
       - name: Setup PHP
         uses: shivammathur/setup-php@afefcaf556d98dc7896cca380e181decb609ca44
