build: set node version to ^20

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"extends @nextcloud/browserslist-config"
 	],
 	"engines": {
-		"node": ">=20.0.0"
+		"node": "^20.0.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.23.7",
